# TaskSystem

./: CMakeLists.txt  README.md
TaskSystem/: CMakeLists.txt  Command.cpp  Command.h  CommandWrapper.h  DatabaseManager.cpp  DatabaseManager.h  LogQueue.h  Logger.cpp  Logger.h  Register_Command.h  Run_command.cpp  Run_command.h  Task.h  TaskManager.cpp  TaskManager.h  TaskSystem.cpp  TaskSystem.h  global.h
cli_TaskSystem/: CMakeLists.txt  TaskSystem.cpp
cli_TaskSystem/plugins/: LogQueue.cpp  LogQueue.h  Logger.cpp  Logger.h
cli_TaskSystem/src/: Command.cpp  Command.h  DatabaseManager.cpp  DatabaseManager.h  Register_Command.h  Run_command.cpp  Run_command.h  TaskManager.cpp  TaskManager.h
cli_TaskSystem/static/: Task.h
sqlite3mc-2.1.1-sqlite-3.49.2-icu-win64/: readme-precompiled.md
sqlite3mc/dll/: sqlite3mc_icu_x64.exp  sqlite3mc_icu_x64.lib
